add smooth scroll to html

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,26 +2,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --var-rich-black: "#00111C";
-    --var-Eerie-black: "#232323";
-    --var-blood-red: "#650000"
-
+  --var-rich-black: '#00111C';
+  --var-Eerie-black: '#232323';
+  --var-blood-red: '#650000';
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    scroll-behavior: smooth;
+  }
+}
+
 @layer utilities {
-    .text-rich-black {
-        color: var(--var-rich-black);
-    }
+  .text-rich-black {
+    color: var(--var-rich-black);
+  }
 
-    .text-Eerie-black {
-        color: var(--var-Eerie-black);
-    }
+  .text-Eerie-black {
+    color: var(--var-Eerie-black);
+  }
 
-    .text-blood-red {
-        color: var(--var-blood-red);
-    }
+  .text-blood-red {
+    color: var(--var-blood-red);
+  }
 }
